# platform.core.uifw.vc-engine-default

./: AUTHORS  CMakeLists.txt  NOTICE  vc-default-info.xml
engine_data/: config.tizen.v01.ini  config.tizen.v02.ini
engine_data/AM/eng/MC.opt/: mdef  means  noisedict  sendump  transition_matrices  variances
engine_data/AM/kor/Baseline_MC.opt/: feat.params  mdef  means  sendump  transition_matrices  variances
engine_data/task/tizen.v01/: tizen.dyn.fsg_class_count  tizen.dyn.rmeps.detmin.out.fsg  tizen.sta.rmeps.detmin.out.fsg  tizen.test.dic  tizen.test.dic2  tizen.test.eng.dic  tizen.test.vocab  vad-com
packaging/: vc-engine-default.spec
