CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(vc-engine-default C)

SET(VERSION 0.2.0)

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" MATCHES "^arm.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/arm/libvc-engine-default.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^i586.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libvc-engine-default.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^i686.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libvc-engine-default.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^aarch64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libvc-engine-default.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^x86_64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libvc-engine-default.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine/ COMPONENT RuntimeLibraries)
ENDIF()

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/engine_data/ DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/engine_data)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/vc-default-info.xml DESTINATION ${TZ_SYS_RO_SHARE}/voice/vc/1.0/engine-info/)
